@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -142,7 +142,9 @@ public class POP3Message extends MimeMessage {
 					msgSize > 0 ? msgSize + hdrSize : 0);
 		if (rawcontent == null) {
 		    expunged = true;
-		    throw new MessageRemovedException();    //  XXX - what else?
+		    throw new MessageRemovedException(
+			"can't retrieve message #" + msgnum +
+			" in POP3Message.getContentStream"); // XXX - what else?
 		}
 		if (headers == null ||
 			((POP3Store)(folder.getStore())).forgetTopHeaders) {
@@ -444,6 +446,33 @@ public class POP3Message extends MimeMessage {
     public void saveChanges() throws MessagingException {
 	// POP3 Messages are read-only
 	throw new IllegalWriteException("POP3 messages are read-only");
+    }
+
+    /**
+     * Output the message as an RFC 822 format stream, without
+     * specified headers.  If the property "mail.pop3.cachewriteto"
+     * is set to "true", and ignoreList is null, and the message hasn't
+     * already been cached as a side effect of other operations, the message
+     * content is cached before being written.  Otherwise, the message is
+     * streamed directly to the output stream without being cached.
+     *
+     * @exception javax.mail.MessagingException
+     * @exception IOException	if an error occurs writing to the stream
+     *				or if an error is generated by the
+     *				javax.activation layer.
+     * @see javax.activation.DataHandler#writeTo
+     */
+    public synchronized void writeTo(OutputStream os, String[] ignoreList)
+				throws IOException, MessagingException {
+	if (content == null && ignoreList == null &&
+			!((POP3Store)(folder.getStore())).cacheWriteTo) {
+	    if (!folder.getProtocol().retr(msgnum, os)) {
+		expunged = true;
+		throw new MessageRemovedException("can't retrieve message #" +
+		    msgnum + " in POP3Message.writeTo");    // XXX - what else?
+	    }
+	} else
+	    super.writeTo(os, ignoreList);
     }
 
     /**
